# vimrc

./: GlobalSnippets.code-snippets  README.MD  README.md  Shadowrocket.conf  aria2.conf  hjx.cfg  hjx_map.cfg  hjx_normal.cfg  normal.cfg  number.vb  setting.json  sources.list  startup.bat  update host for onenote.bat  vimrc  vimrc.local  vimrc.sh  vscode_settings.json
VSCode/: latex.json  setting.json
WSL/: .wslconfig  Dockerfile  README.MD  proxychains.conf  run.sh  sources.list  sources_tsinghua.list
aria2/: aria2.conf  readme.md  startup.bat
bat/: GetHash_addkey_addkey.reg  GetHash_addkey_remove.reg  Le Petit Prince_addkey.reg  Le Petit Prince_remove.reg  管理员取得所有权.reg
bat/Shutdown/: 重启进入bios.bat
conda/: .condarc  readme.md
csgo/: config.cfg  map.cfg  normal.cfg  readme.md  video.txt
demo/vscode_pyqt5/: main.py  readme.md
powershell/: update host for onenote.bat  update_yml_with_rules.ps1
powershell/AddFolderNameToTheFileName/: AddFolderNameToTheFileName.ps1  Readme.md
powershell/CopyWinLockScreenWithDate/: CopyWinLockScreenWithDate.ps1  Readme.md
powershell/InsertFileNameToFileFirstLine/: InsertFileNameToFileFirstLine.ps1  Readme.md  test.txt
powershell/Shutdown/: 重启.bat  高级重启选项.bat
vscode/: GlobalSnippets.code-snippets  keybindings.json  setting.json
vscode_cpp/: .gitignore  CMakeLists.txt  c_cpp_properties.json  launch.json  readme.md  setting.json  tasks.json
vscode_java/: readme.md
vscode_latex/: Dockerfile  readme.md  setting.json
vscode_vim/: README.md  keybindings_20220801.json  keybings_20220829.json  readme.md  setting.json  setting_20220801.json  setting_20220829.json
wsl/: README.MD
